--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,6 @@ filter_plugins = filter_plugins
 host_key_checking = False
 deprecation_warnings = False
 roles_path = ./roles
+timeout = 60
+callback_whitelist = profile_tasks
+#enable_task_debugger = True
