--- a/destroy-ocp-vsphere.yml
+++ b/destroy-ocp-vsphere.yml
@@ -32,18 +32,18 @@
           type: thin
           datastore: "{{ datastore }}"
       loop:
-        - { name : "bootstrap", template: "{{ templateName }}" }
-        - { name : "master0", template: "{{ templateName }}" }
-        - { name : "master1", template: "{{ templateName }}" }
-        - { name : "master2", template: "{{ templateName }}" }
-        - { name : "storage0", template: "{{ templateName }}" }
-        - { name : "storage1", template: "{{ templateName }}" }
-        - { name : "storage2", template: "{{ templateName }}" }
-        - { name : "worker0", template: "{{ templateName }}" }
-        - { name : "worker1", template: "{{ templateName }}" }
-        - { name : "worker2", template: "{{ templateName }}" }
-        - { name : "worker3", template: "{{ templateName }}" }
-        - { name : "worker4", template: "{{ templateName }}" }
-        - { name : "worker5", template: "{{ templateName }}" }
+        - { name : "bootstrap.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "master0.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "master1.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "master2.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "storage0.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "storage1.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "storage2.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "worker0.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "worker1.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "worker2.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "worker3.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "worker4.{{ config.baseDomain }}", template: "{{ templateName }}" }
+        - { name : "worker5.{{ config.baseDomain }}", template: "{{ templateName }}" }
       tags:
         - "1"
