--- a/setup-helpernode.yml
+++ b/setup-helpernode.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  vars_files: ./vars/vars-helpernode.yaml
+  vars_files: ./vars/vars-helpernode-{{ BUILD_LAB }}.yaml
   roles:
     - ocp4-upi-helpernode
     - 389-ldap-server
