tested and working

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,4 +7,5 @@ deprecation_warnings = False
 roles_path = ./roles
 timeout = 60
 callback_whitelist = profile_tasks
+remote_user = openshift 
 #enable_task_debugger = True
