--- a/helper-deploy-vsphere.yml
+++ b/helper-deploy-vsphere.yml
@@ -45,7 +45,28 @@
       tags:
         - "1"
 
-    - name: VMSETUP 2.0 | Start Helper Node
+    - name: VMSETUP 2.0 | Update Mac Address Core Cluster
+      command: "{{ govc_file }} vm.network.change -net.address {{ item.mac }} -vm={{ item.name }} ethernet-0"
+      environment:
+        GOVC_HOST: "{{ vcenter.ip }}"
+        GOVC_URL: "https://{{ vcenter.ip }}/sdk"
+        GOVC_USERNAME: "{{ vcenter.username }}"
+        GOVC_PASSWORD: "{{ vcenter.password }}"
+        GOVC_INSECURE: 1
+        GOVC_DATASTORE: "{{ vcenter.datastore }}"
+        GOVC_DATACENTER: "{{ vcenter.datacenter }}"
+        GOVC_CLUSTER: "{{ vcenter.cluster }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network_3 }}"
+      loop:
+        - { name : "{{ hostname }}.{{ config.baseDomain }}", mac: "{{ helper.macaddr }}" }
+      retries: 3
+      delay: 3
+      register: result
+      until: result.rc == 0
+      tags:
+        - "2"
+
+    - name: VMSETUP 3.0 | Start Helper Node
       vmware_guest:
         hostname: "{{ vcenter.ip }}"
         username: "{{ vcenter.username }}"
@@ -58,9 +79,9 @@
         wait_for_ip_address: yes
       register: helpernode
       tags:
-        - "2"
+        - "3"
 
-    - name: VMSETUP 2.1 | Label Helper Node
+    - name: VMSETUP 3.1 | Label Helper Node
       command: "{{ govc_file }} vm.change -vm={{ item.name }} -annotation=Cluster-Name-{{ BUILD_LAB }}-{{ config.clusterName }}-{{ domain }},Instance-Owner-Red-Hat-SSA-Team"
       environment:
         GOVC_HOST: "{{ vcenter.ip }}"
@@ -75,15 +96,15 @@
       loop:
          - { name : "{{ hostname }}.{{ config.baseDomain }}" }
       tags:
-        - "2"
+        - "3"
 
-    - name: VMSETUP 3.0 | Set Facts 
+    - name: VMSETUP 4.0 | Set Facts 
       set_fact:
         new_vm: "{{ helpernode }}"
       tags:
-        - "3"
+        - "4"
 
-    - name: VMSETUP 4.0 | Dynamic Nodes
+    - name: VMSETUP 4.1 | Dynamic Nodes
       add_host:
         hostname: "{{ item.hw_name }}"
         ansible_host: "{{ item.ipv4 }}"
