--- a/vars/vars-helpernode-gsslab.yaml
+++ b/vars/vars-helpernode-gsslab.yaml
@@ -4,6 +4,7 @@ helper:
   name: "helper"
   ipaddr: "192.168.0.2"
   networkifacename: "ens224"
+  macaddr: "00:50:56:b5:16:6c"
 dns:
   domain: "gsslab.brq.redhat.com"
   clusterid: "ocp4"
