--- a/post-install.yml
+++ b/post-install.yml
@@ -56,6 +56,7 @@
     command: oc create secret generic htpass-secret --from-file=htpasswd="{{ htpasswdpath }}" -n openshift-config
     # failed_when: "'already exists' not in result2.stderr"  # use this when run multiple times
     register: result2
+    ignore_errors: yes
     tags:
       - "2"
 
