--- a/post-install.yml
+++ b/post-install.yml
@@ -291,18 +291,38 @@
     tags:
       - "10"
 
+  - name: POSTINSTALL 10.6 | Patch the Storage cluster
+    command: "{{ item }}"
+    register: result
+    loop:
+        - "oc patch storageclass thin -p '{\"metadata\": {\"annotations\": {\"storageclass.kubernetes.io/is-default-class\": \"true\"}}}'"
+    when: enable_ocs_storage|bool == False
+    tags:
+      - "10"
+
   - name: POSTINSTALL 11.0 | Change registry Operator to "Managed"
     command: "oc patch configs.imageregistry.operator.openshift.io/cluster --type merge -p '{\"spec\":{\"managementState\": \"Managed\"}}' -n openshift-image-registry"
     register: result11
     tags:
       - "11"
 
-  - name: POSTINSTALL 12.0 | Enable Registry PVC
+  - name: POSTINSTALL 12.0 | Enable ocs-storagecluster-cephfs Registry PVC (OCS)
     k8s:
       state: present
       # apply: "yes"  # only works with Ansible 2.9 and higher
       namespace: "openshift-image-registry"
       src: "./postinstall/ocs4registry-pvc.yml"
+    when: enable_ocs_storage|bool == True
+    tags:
+      - "12"
+
+  - name: POSTINSTALL 12.1 | Enable Thin Registry PVC (VMware thin)
+    k8s:
+      state: present
+      # apply: "yes"  # only works with Ansible 2.9 and higher
+      namespace: "openshift-image-registry"
+      src: "./postinstall/registry-thin-pvc.yml"
+    when: enable_ocs_storage|bool == False
     tags:
       - "12"
 
