--- a/post-install.yml
+++ b/post-install.yml
@@ -56,6 +56,7 @@
     # failed_when: "'already exists' not in result2.stderr"  # use this when run multiple times
     register: result2
     ignore_errors: yes
+    when: enable_htpasswd_auth |bool == True    
     tags:
       - "2"
 
@@ -76,6 +77,7 @@
             htpasswd:
               fileData:
                 name: htpasswd-secret
+    when: enable_htpasswd_auth |bool == True
     tags:
       - "2"
 
@@ -84,6 +86,7 @@
     # failed_when: "'already exists' not in result3.stderr"  # use this when run multiple times
     register: result3
     ignore_errors: yes
+    when: enable_ldap_auth |bool == True
     tags:
       - "3"
 
@@ -116,6 +119,7 @@
                 name: ldap-secret
               insecure: true
               url: "{{ ldap_url }}"
+    when: enable_ldap_auth |bool == True
     tags:
       - "3"
 
