--- a/helper-deploy-vsphere.yml
+++ b/helper-deploy-vsphere.yml
@@ -7,13 +7,68 @@
     datastore: "{{ vcenter.datastore }}"
     govc_file: "/usr/local/bin/govc"
     hostname: helper
+    remote_user: openshift
+    rhel_template: rhel7.7-template
   vars_files:
     - "./vars/vars-{{ BUILD_LAB }}.yml"
     - "./vars/vars-helpernode-{{ BUILD_LAB }}.yaml"
 
   tasks:
 
-    - name: VMSETUP 1.0 | Create Helper Node 
+    - name: VMSETUP 1.0 | Prep Template Metadata
+      template:
+        src: "{{ playbook_dir }}/templates/metadata.yaml.j2"
+        dest: "{{ playbook_dir }}/temp/metadata.yaml"
+      tags:
+        - "1"
+
+    - name: VMSETUP 1.1 | Create Metadata Variable
+      shell: "gzip -c9 <temp/metadata.yaml | { base64 -w0 2>/dev/null || base64; }"
+      register: raw_metadata
+      tags:
+        - "1"
+
+    - name: VMSETUP 1.2 | Set Facts Metadata
+      set_fact:
+        metadata: "{{ raw_metadata.stdout }}"
+      tags:
+        - "1"
+
+    - name: VMSETUP 1.2 | Prep Template UserData
+      template:
+        src: "{{ playbook_dir }}/templates/userdata.yaml.j2"
+        dest: "{{ playbook_dir }}/temp/userdata.yaml"
+      tags:
+        - "1"
+
+    - name: VMSETUP 1.3 | Create UserData Variable
+      shell: "gzip -c9 <temp/userdata.yaml | { base64 -w0 2>/dev/null || base64; }"
+      register: raw_userdata
+      tags:
+        - "1"
+
+    - name: VMSETUP 1.4 | Set Facts UserData
+      set_fact:
+        userdata: "{{ raw_userdata.stdout }}"
+      tags:
+        - "1"
+
+    - name: VMSETUP 1.5 | Update RHEL Template
+      command: '{{ govc_file }} vm.change -vm "{{ rhel_template }}" -e guestinfo.metadata="{{ metadata }}" -e guestinfo.metadata.encoding="gzip+base64" -e guestinfo.userdata="{{ userdata }}" -e guestinfo.userdata.encoding="gzip+base64"'
+      environment:
+        GOVC_HOST: "{{ vcenter.ip }}"
+        GOVC_URL: "https://{{ vcenter.ip }}/sdk"
+        GOVC_USERNAME: "{{ vcenter.username }}"
+        GOVC_PASSWORD: "{{ vcenter.password }}"
+        GOVC_INSECURE: 1
+        GOVC_DATASTORE: "{{ vcenter.datastore }}"
+        GOVC_DATACENTER: "{{ vcenter.datacenter }}"
+        GOVC_CLUSTER: "{{ vcenter.cluster }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network_1 }}"
+      tags:
+        - "1"
+
+    - name: VMSETUP 2.0 | Create Helper Node
       vmware_guest:
         hostname: "{{ vcenter.ip }}"
         username: "{{ vcenter.username }}"
@@ -43,9 +98,9 @@
            value: "TRUE"
       register: helpernode
       tags:
-        - "1"
+        - "2"
 
-    - name: VMSETUP 2.0 | Update Mac Address Core Cluster
+    - name: VMSETUP 3.0 | Update Mac Address Core Cluster
       command: "{{ govc_file }} vm.network.change -net.address {{ item.mac }} -vm={{ item.name }} ethernet-0"
       environment:
         GOVC_HOST: "{{ vcenter.ip }}"
@@ -64,9 +119,9 @@
       register: result
       until: result.rc == 0
       tags:
-        - "2"
+        - "3"
 
-    - name: VMSETUP 3.0 | Start Helper Node
+    - name: VMSETUP 4.0 | Start Helper Node
       vmware_guest:
         hostname: "{{ vcenter.ip }}"
         username: "{{ vcenter.username }}"
@@ -79,9 +134,9 @@
         wait_for_ip_address: yes
       register: helpernode
       tags:
-        - "3"
+        - "4"
 
-    - name: VMSETUP 3.1 | Label Helper Node
+    - name: VMSETUP 5.0| Label Helper Node
       command: "{{ govc_file }} vm.change -vm={{ item.name }} -annotation=Cluster-Name-{{ BUILD_LAB }}-{{ config.clusterName }}-{{ domain }},Instance-Owner-Red-Hat-SSA-Team"
       environment:
         GOVC_HOST: "{{ vcenter.ip }}"
@@ -96,15 +151,15 @@
       loop:
          - { name : "{{ hostname }}.{{ config.baseDomain }}" }
       tags:
-        - "3"
+        - "5"
 
-    - name: VMSETUP 4.0 | Set Facts 
+    - name: VMSETUP 6.0 | Set Facts
       set_fact:
         new_vm: "{{ helpernode }}"
       tags:
-        - "4"
+        - "6"
 
-    - name: VMSETUP 4.1 | Dynamic Nodes
+    - name: VMSETUP 6.1 | Dynamic Nodes
       add_host:
         hostname: "{{ item.hw_name }}"
         ansible_host: "{{ item.ipv4 }}"
@@ -112,7 +167,7 @@
       with_items:
         - "{{ new_vm.instance }}"
       tags:
-        - "4"
+        - "6"
 
 - name: Configure Helper
   hosts: helpernode_ssh
@@ -131,18 +186,18 @@
 
   tasks:
 
-    - name: HELPER 5.0 | Wait for SSH banners
+    - name: HELPER 7.0 | Wait for SSH banners
       local_action: wait_for port=22 host={{ ansible_host }} search_regex=OpenSSH delay=5
       become: false
       tags:
-        - "5"
+        - "7"
 
-    - name: HELPER 6.0 | Set Hostname
+    - name: HELPER 8.0 | Set Hostname
       hostname: name="{{ hostname }}.{{ config.baseDomain }}"
       tags:
-        - "6"
+        - "8"
 
-    - name: HELPER 7.0 | Enable RHEL Subs
+    - name: HELPER 9.0 | Enable RHEL Subs
       redhat_subscription:
         state: present
         username: "{{ rhn.username }}"
@@ -154,9 +209,9 @@
       delay: 10
       until: not subscrition_result.failed
       tags:
-        - "7"
+        - "9"
 
-    - name: HELPER 8.0 | Clean RHEL Repos
+    - name: HELPER 10.0 | Clean RHEL Repos
       rhsm_repository:
         name: '*'
         state: disabled
@@ -165,9 +220,9 @@
       delay: 10
       until: not subscrition_result.failed
       tags:
-        - "8"
+        - "10"
 
-    - name: HELPER 9.0 | Enable RHEL Repos
+    - name: HELPER 11.0 | Enable RHEL Repos
       rhsm_repository:
         name: "{{ item }}"
         state: enabled
@@ -180,20 +235,20 @@
       delay: 10
       until: not subscrition_result.failed
       tags:
-        - "9"
+        - "11"
 
-    - name: HELPER 10.0 | Install packages
+    - name: HELPER 12.0 | Install packages
       yum: name={{ item }} update_cache=yes state=latest
       with_items:
         - git
         - NetworkManager-glib
         - nm-connection-editor.x86_64
-        - libsemanage-python 
+        - libsemanage-python
         - policycoreutils-python
       tags:
-        - "10"
+        - "12"
 
-    - name: HELPER 11.0 | Add Interface
+    - name: HELPER 13.0 | Add Interface
       nmcli:
         conn_name: "{{ helper.networkifacename }}"
         ifname: "{{ helper.networkifacename }}"
@@ -202,9 +257,9 @@
         gw4: "{{ ansible_host }}"
         state: present
       tags:
-        - "11"
+        - "13"
 
-    - name: HELPER 11.1 | Add DNS
+    - name: HELPER 13.1 | Add DNS
       nmcli:
         conn_name: "{{ helper.networkifacename }}"
         type: ethernet
@@ -212,9 +267,9 @@
         - 127.0.0.1
         state: present
       tags:
-        - "11"
+        - "13"
 
-    - name: HELPER 11.2 | Add DNS
+    - name: HELPER 13.2 | Add DNS
       nmcli:
         conn_name: "{{ helper.networkifdefault }}"
         type: ethernet
@@ -222,9 +277,9 @@
         - 127.0.0.1
         state: present
       tags:
-        - "11"
+        - "13"
 
-    - name: HELPER 12.0 | Enable IP Forwarding
+    - name: HELPER 14.0 | Enable IP Forwarding
       sysctl:
         name: net.ipv4.ip_forward
         value: '1'
@@ -232,38 +287,38 @@
         state: present
         reload: yes
       tags:
-        - "12"
+        - "14"
 
-    - name: HELPER 13.0 | Ensure the Interface is Static
+    - name: HELPER 15.0 | Ensure the Interface is Static
       shell: nmcli connection modify "{{ helper.networkifacename }}" ipv4.method static
       tags:
         - "13"
 
-    - name: HELPER 13.1 | Remove DHCP DNS
+    - name: HELPER 15.1 | Remove DHCP DNS
       shell: nmcli con mod "{{ helper.networkifacename }}" ipv4.ignore-auto-dns yes
       tags:
-        - "13"
+        - "15"
 
-    - name: HELPER 13.2 | Remove DHCP DNS
+    - name: HELPER 15.2 | Remove DHCP DNS
       shell: nmcli con mod "{{ helper.networkifdefault }}"  ipv4.ignore-auto-dns yes
       tags:
-        - "13"
+        - "15"
 
-    - name: HELPER 14.0 | Copy SSH Private Keys
+    - name: HELPER 16.0 | Copy SSH Private Keys
       copy:
         src: ~/.ssh/id_rsa
         dest: "/root/.ssh/id_rsa"
         mode: 0400
       tags:
-        - "14"
+        - "16"
 
-    - name: HELPER 14.1 | Copy SSH Public Keys
+    - name: HELPER 16.1 | Copy SSH Public Keys
       copy:
         src: ~/.ssh/id_rsa.pub
         dest: "/root/.ssh/id_rsa.pub"
         mode: 0600
       tags:
-        - "14"
+        - "16"
 
 
 - name: Build Helper
